# tattooportfolio

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/backend/: settings.py  urls.py
backend/portfolio/: admin.py  models.py  serializers.py  views.py
backend/portfolio/migrations/: 0001_initial.py
frontend/: package-lock.json
frontend/src/: App.js
frontend/src/components/: HomePage.css  Navbar.css  Navbar.js  Portfolio.js  RatesAndPolicies.js
frontend/src/components/Booking/: Booking.js
frontend/src/components/Homepage/: HomePage.js
frontend/src/components/Shared/: Navbar.js
