[tool.poetry]
name = "tattooportfolio"
version = "0.1.0"
description = ""
authors = ["jules319 <jules31901@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
